--- a/plagdef/gui/ui/matches_dialog.ui
+++ b/plagdef/gui/ui/matches_dialog.ui
@@ -6,7 +6,7 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>800</width>
+                <width>820</width>
                 <height>600</height>
             </rect>
         </property>
@@ -18,13 +18,13 @@
         </property>
         <property name="minimumSize">
             <size>
-                <width>800</width>
+                <width>820</width>
                 <height>600</height>
             </size>
         </property>
         <property name="maximumSize">
             <size>
-                <width>800</width>
+                <width>820</width>
                 <height>600</height>
             </size>
         </property>
@@ -83,6 +83,9 @@
                             <property name="text">
                                 <string>doc2</string>
                             </property>
+                            <property name="wordWrap">
+                                <bool>false</bool>
+                            </property>
                         </widget>
                     </item>
                     <item row="0" column="0" alignment="Qt::AlignHCenter">
@@ -94,6 +97,9 @@
                             </property>
                             <property name="text">
                                 <string>doc1</string>
+                            </property>
+                            <property name="wordWrap">
+                                <bool>false</bool>
                             </property>
                         </widget>
                     </item>
@@ -120,6 +126,9 @@
                             <property name="text">
                                 <string>(path/to/doc1)</string>
                             </property>
+                            <property name="wordWrap">
+                                <bool>false</bool>
+                            </property>
                         </widget>
                     </item>
                     <item row="1" column="1" alignment="Qt::AlignHCenter">
@@ -129,6 +138,9 @@
                             </property>
                             <property name="text">
                                 <string>(path/to/doc2)</string>
+                            </property>
+                            <property name="wordWrap">
+                                <bool>false</bool>
                             </property>
                         </widget>
                     </item>
