--- a/plagdef/gui/ui/results_widget.ui
+++ b/plagdef/gui/ui/results_widget.ui
@@ -713,6 +713,42 @@
                 </widget>
             </item>
             <item alignment="Qt::AlignHCenter">
+                <widget class="QPushButton" name="export_button">
+                    <property name="minimumSize">
+                        <size>
+                            <width>100</width>
+                            <height>50</height>
+                        </size>
+                    </property>
+                    <property name="styleSheet">
+                        <string notr="true">QPushButton {
+                            font-size: 14pt;
+                            border-radius: 25px;
+                            border: 3px solid rgb(242, 141, 1);
+                            border-style: outset;
+                            color: rgb(255, 255, 255);
+                            }
+
+                            :enabled {
+                            background-color: rgb(242, 141, 1);
+                            }
+
+                            :hover{
+                            background-color: #b56900;
+                            border-color: #b56900;
+                            }
+
+                            :pressed {
+                            border-style: inset;
+                            }
+                        </string>
+                    </property>
+                    <property name="text">
+                        <string>Export</string>
+                    </property>
+                </widget>
+            </item>
+            <item alignment="Qt::AlignHCenter">
                 <widget class="QPushButton" name="again_button_res">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
