--- a/plagdef/gui/ui/settings_dialog.ui
+++ b/plagdef/gui/ui/settings_dialog.ui
@@ -7,19 +7,19 @@
                 <x>0</x>
                 <y>0</y>
                 <width>370</width>
-                <height>200</height>
+                <height>279</height>
             </rect>
         </property>
         <property name="minimumSize">
             <size>
                 <width>370</width>
-                <height>200</height>
+                <height>250</height>
             </size>
         </property>
         <property name="maximumSize">
             <size>
                 <width>370</width>
-                <height>200</height>
+                <height>280</height>
             </size>
         </property>
         <property name="windowTitle">
@@ -34,15 +34,6 @@
             <string notr="true">background-color: rgb(77, 80, 87);</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
-            <property name="leftMargin">
-                <number>50</number>
-            </property>
-            <property name="topMargin">
-                <number>25</number>
-            </property>
-            <property name="rightMargin">
-                <number>50</number>
-            </property>
             <item alignment="Qt::AlignHCenter">
                 <widget class="QLabel" name="extraction_heading_label">
                     <property name="styleSheet">
@@ -141,8 +132,14 @@
                     </property>
                 </widget>
             </item>
-            <item>
+            <item alignment="Qt::AlignHCenter">
                 <widget class="QSlider" name="sim_slider">
+                    <property name="minimumSize">
+                        <size>
+                            <width>200</width>
+                            <height>0</height>
+                        </size>
+                    </property>
                     <property name="maximum">
                         <number>10</number>
                     </property>
@@ -165,6 +162,64 @@
                         <number>1</number>
                     </property>
                 </widget>
+            </item>
+            <item>
+                <spacer name="th_es_spacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>QSizePolicy::Fixed</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>2</width>
+                            <height>5</height>
+                        </size>
+                    </property>
+                </spacer>
+            </item>
+            <item alignment="Qt::AlignHCenter">
+                <widget class="QLabel" name="es_heading_label">
+                    <property name="styleSheet">
+                        <string notr="true">color: rgb(255, 255, 255);
+                            font-size: 12pt;
+                        </string>
+                    </property>
+                    <property name="text">
+                        <string>Download folder for external sources</string>
+                    </property>
+                </widget>
+            </item>
+            <item>
+                <layout class="QHBoxLayout" name="es_layout">
+                    <property name="leftMargin">
+                        <number>25</number>
+                    </property>
+                    <property name="rightMargin">
+                        <number>25</number>
+                    </property>
+                    <item>
+                        <widget class="QLineEdit" name="es_line_edit">
+                            <property name="styleSheet">
+                                <string notr="true">color: rgb(255, 255, 255);</string>
+                            </property>
+                            <property name="readOnly">
+                                <bool>true</bool>
+                            </property>
+                        </widget>
+                    </item>
+                    <item>
+                        <widget class="QPushButton" name="es_button">
+                            <property name="styleSheet">
+                                <string notr="true">color: rgb(255, 255, 255);</string>
+                            </property>
+                            <property name="text">
+                                <string>Open...</string>
+                            </property>
+                        </widget>
+                    </item>
+                </layout>
             </item>
             <item>
                 <spacer name="bottom_spacer">
